# as_statistical_dashboard

./: .gitignore  README.md  environment.yml  pyproject.toml
src/statdash/: __init__.py
src/statdash/config/: settings.py
src/statdash/processing/: companies_processing.py  sleep_processing.py
streamlit_app/: Home.py
streamlit_app/pages/: 01_Companies_Dataset.py  02_Sleep_Dataset.py
